[tool.poetry]
name = "web-m11-hw-rest-api"
version = "0.1.0"
description = ""
authors = ["Andrii-Oliinyk-2726 <123332365+Andrii-Oliinyk-2726@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_m11_hw_rest_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
unicorn = {extras = ["standart"], version = "^2.0.1.post1"}
uvicorn = {extras = ["standart"], version = "^0.22.0"}
alchemy = "^20.5"
sqlalchemy = "^2.0.17"
pydantic = {extras = ["email"], version = "^1.10.9"}
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
